Adding support for "@example file [description]"
Add a Sami\Parser\ClassVisitor\ExampleClassVisitor to the 'traverser' of
your pimple container so that @example tags are replaced with the
contents of an example file located in a path passed in the constructor
of the visitor.

--- a/Sami/Resources/themes/default/stylesheet.css
+++ b/Sami/Resources/themes/default/stylesheet.css
@@ -210,3 +210,8 @@ td.type {
     padding: 10px;
     background-color: #efefef;
 }
+
+pre.code {
+    background-color: #f5f5f5;
+    padding: 12px;
+}
