--- a/Sami/Resources/themes/default/pages/index.twig
+++ b/Sami/Resources/themes/default/pages/index.twig
@@ -27,13 +27,13 @@
                 {%- set value = element[1] %}
                 {%- if 'class' == type -%}
                     <dt>{{ class_link(value) }}{% if has_namespaces %} &mdash; <em>Class in namespace {{ namespace_link(value.namespace) }}{% endif %}</em></dt>
-                    <dd>{{ value.shortdesc|desc(value)|nl2br }}</dd>
+                    <dd>{{ value.shortdesc|desc(value) }}</dd>
                 {%- elseif 'method' == type -%}
                     <dt>{{ method_link(value) }}() &mdash; <em>Method in class {{ class_link(value.class) }}</em></dt>
-                    <dd>{{ value.shortdesc|desc(value.class)|nl2br }}</dd>
+                    <dd>{{ value.shortdesc|desc(value.class) }}</dd>
                 {%- elseif 'property' == type -%}
                     <dt>${{ property_link(value) }} &mdash; <em>Property in class {{ class_link(value.class) }}</em></dt>
-                    <dd>{{ value.shortdesc|desc(value.class)|nl2br }}</dd>
+                    <dd>{{ value.shortdesc|desc(value.class) }}</dd>
                 {%- endif %}
             {%- endfor %}
         </dl>
