--- a/Sami/Resources/themes/default/layout/page.twig
+++ b/Sami/Resources/themes/default/layout/page.twig
@@ -13,6 +13,7 @@
                 <li><a href="{{ path('namespaces.html') }}">Namespaces</a></li>
             {% endif %}
             <li><a href="{{ path('interfaces.html') }}">Interfaces</a></li>
+            <li><a href="{{ path('traits.html') }}">Traits</a></li>
             <li><a href="{{ path('doc-index.html') }}">Index</a></li>
             {{ block('frame') }}
         </ul>
