--- a/Sami/Resources/themes/default/pages/traits.twig
+++ b/Sami/Resources/themes/default/pages/traits.twig
@@ -2,7 +2,7 @@
 
 {% from "macros.twig" import class_link %}
 
-{% block title %}Classes | {{ parent() }}{% endblock %}
+{% block title %}Traits | {{ parent() }}{% endblock %}
 
 {% block body_class 'overview' %}
 
@@ -14,14 +14,14 @@
     <table>
         {% for class in classes %}
             {% if class.trait %}
-            <tr>
-                <td>
-                    {{ class_link(class, {'target': 'main'}, true) }}
-                </td>
-                <td>
-                    {{ class.shortdesc|desc(class) }}
-                </td>
-            </tr>
+                <tr>
+                    <td>
+                        {{ class_link(class, {'target': 'main'}, true) }}
+                    </td>
+                    <td>
+                        {{ class.shortdesc|desc(class) }}
+                    </td>
+                </tr>
             {% endif %}
         {% endfor %}
     </table>
