--- a/Sami/Resources/themes/enhanced/layout/frame.twig
+++ b/Sami/Resources/themes/enhanced/layout/frame.twig
@@ -1,5 +1,11 @@
 {% extends "layout/base.twig" %}
 
+{% block head %}
+    {{ parent() }}
+    <script src="{{ path('js/jquery-1.3.2.min.js') }}" type="text/javascript" charset="utf-8"></script>
+    <script src="{{ path('js/permalink.js') }}" type="text/javascript" charset="utf-8"></script>
+{% endblock %}
+
 {% block html %}
     <frameset cols="20%,80%" frameborder="1" border="1" bordercolor="#bbb" framespacing="1">
         <frame src="{% block frame_src %}{% endblock %}" name="index">
