Show scope for public and private class properties

--- a/Sami/Resources/themes/default/pages/class.twig
+++ b/Sami/Resources/themes/default/pages/class.twig
@@ -139,7 +139,9 @@
             <tr>
                 <td class="type" id="property_{{ property.name }}">
                     {% if property.static %}static{% endif %}
+                    {% if property.public %}public{% endif %}
                     {% if property.protected %}protected{% endif %}
+                    {% if property.private %}private{% endif %}
                     {{ hint_link(property.hint) }}
                 </td>
                 <td>${{ property.name }}</td>
