Extracting url building logic to dedicated GitHubRemoteRepository class
1. refactoring to increase clarity of added logic
2. adding parenthesis around "View Source" link
3. updating documentation
4. adding "GitHubRemoteRepository" class import to the examples

--- a/Sami/Resources/themes/default/macros.twig
+++ b/Sami/Resources/themes/default/macros.twig
@@ -40,7 +40,7 @@
 
 {% macro source_link(project, class) -%}
     {% if class.sourcepath %}
-        <a href="{{ class.sourcepath }}">View source</a>
+        (<a href="{{ class.sourcepath }}">View source</a>)
     {%- endif %}
 {%- endmacro %}
 
