Showing namespaces on each namespace page.
This commit builds on top of PR https://github.com/fabpot/Sami/pull/13,
but it has been updated for recent changes to Sami. In addition to
some minor tweaks, this PR shows child namespaces as a comma separated
list of namespaces rather than in a table to take up less space. This
allows users to see classes and interfaces on a page without having
to scroll down past the fold (providing a better user experience IMO).

Closes #13. Closes #119.

--- a/Sami/Resources/themes/default/namespace.twig
+++ b/Sami/Resources/themes/default/namespace.twig
@@ -20,7 +20,16 @@
 {% block content %}
     <h1>{{ namespace_link(namespace, {'target': 'main'}) }}</h1>
 
+    {% if subnamespaces %}
+        <h2>Namespaces</h2>
+        {% for ns in subnamespaces %}
+            {{ namespace_link(ns, {'target': 'main'}) }}
+            {%- if not loop.last -%}, {%- endif -%}
+        {% endfor %}
+    {% endif %}
+
     {% if classes %}
+        <h2>Classes</h2>
         <ul>
             {% for class in classes %}
                 <li>{{ class_link(class, {'target': 'main'}) }}</li>
