Remove namespace from class title and do not show namespace links when simulating

--- a/Sami/Resources/themes/default/layout/layout.twig
+++ b/Sami/Resources/themes/default/layout/layout.twig
@@ -6,7 +6,7 @@
             {% if element[2] %}
                 <li data-name="namespace:{{ element[1]|replace({'\\': '_'}) }}" {% if depth < opened %}class="opened"{% endif %}>
                     <div style="padding-left:{{ depth * 18 }}px" class="hd">
-                        <span class="glyphicon glyphicon-play"></span><a href="{{ namespace_path(element[1]) }}">{{ element[0] }}</a>
+                        <span class="glyphicon glyphicon-play"></span>{% if not project.config('simulate_namespaces') %}<a href="{{ namespace_path(element[1]) }}">{% endif %}{{ element[0] }}{% if not project.config('simulate_namespaces') %}</a>{% endif %}
                     </div>
                     <div class="bd">
                         {{ _self.element(element[2], opened, depth + 1) -}}
