--- a/Sami/Resources/themes/default/class.twig
+++ b/Sami/Resources/themes/default/class.twig
@@ -19,7 +19,7 @@
 {% block page_content %}
 
     <div class="page-header">
-        <h1>{{ class.name }}</h1>
+        <h1>{{ class.name|split('\\')|last }}</h1>
     </div>
 
     <p>{{ block('class_signature') }}</p>
