--- a/Sami/Resources/themes/default/search.twig
+++ b/Sami/Resources/themes/default/search.twig
@@ -36,51 +36,26 @@
     <script type="text/javascript">
 
         (function() {
-            var name = 'search';
-            var regex = new RegExp("[\\?&]" + name + "=([^&#]*)");
-            var results = regex.exec(location.search);
-            if (results === null) {
-                return;
-            }
-
-            // Get the search term
-            var term = decodeURIComponent(results[1].replace(/\+/g, " "));
-            // Attempt to sanitize the input
-            term = term.replace(/<(?:.|\n)*?>/gm, '');
-            // Use the unicode backslash character to match the index.
-            term = term.replace('\\', '\u005c');
-            var lterm = term.toLocaleLowerCase();
-
-            // Update the search box with the term
+            var term = Sami.cleanSearchTerm();
             $('#search').val(term);
             var container = $('.search-results');
 
             // create the search index
             {{ block('search_index') }}
 
-            var class_map = {
-                'Namespace': 'label-default',
-                'Class': 'label-info',
-                'Interface': 'label-primary',
-                'Trait': 'label-success',
-                'Method': 'label-danger',
-                '_': 'label-warning'
-            };
+            var results = Sami.search(term);
+
+            if (results.length == 0) {
+                return;
+            }
 
             var text_content = '';
 
-            // Perform the search.
-            for (var i = 0, len = search_index.length; i < len; i++) {
+            for (var i = 0, len = results.length; i < len; i++) {
 
-                var ele = search_index[i];
-
-                if (!ele.name || ele.name.toLowerCase().indexOf(lterm) == -1) {
-                    continue;
-                }
-
+                var ele = results[i];
                 var contents = '<li><h2 class="clearfix">';
-                var class_name = class_map[ele.type] || class_map['_'];
-
+                var class_name = Sami.getSearchClass(ele.type);
                 contents += '<a href="' + ele.link + '">' + ele.name + '</a>';
                 contents += '<div class="search-type type-' + ele.type + '"><span class="pull-right label ' + class_name + '">' + ele.type + '</span></div>';
                 contents += '</h2>';
@@ -108,37 +83,4 @@
             }
         })();
     </script>
-{% endblock %}
-
-{% macro add_class_methods_index(class) %}
-    {% if class.methods %}
-        {% set from_name = class.name|replace({'\\': '\\u005C'}) %}
-        {% set from_link = class_path(class) %}
-        {% for meth in class.methods %}
-            {"type": "Method", "fromName": "{{ from_name }}", "fromLink": "{{ from_link }}", "link": "{{ method_path(meth) }}", "name": "{{ meth|replace({'\\': '\\u005C'}) }}", "doc": "{{ meth.shortdesc|desc(class)|json_encode }}"},
-        {% endfor %}
-    {% endif %}
-{% endmacro %}
-
-{% block search_index %}
-    var search_index = [
-
-    {% for ns in namespaces -%}
-        {"type": "Namespace", "link": "{{ namespace_path(ns) }}", "name": "{{ ns|replace({'\\': '\\u005C'}) }}", "doc": "Namespace {{ ns|replace({'\\': '\\u005C'}) }}"},
-    {%- endfor %}
-
-    {% for class in interfaces -%}
-        {"type": "Interface", {% if class.namespace %}"fromName": "{{ class.namespace|replace({'\\': '\\u005C'}) }}", "fromLink": "{{ namespace_path(class.namespace) }}",{% endif %} "link": "{{ class_path(class) }}", "name": "{{ class.name|replace({'\\': '\\u005C'}) }}", "doc": "{{ class.shortdesc|desc(class)|json_encode }}"},
-        {{ _self.add_class_methods_index(class) }}
-    {% endfor %}
-
-    {% for class in classes -%}
-        {"type": {% if class.isTrait %}"Trait"{% else %}"Class"{% endif %}, {% if class.namespace %}"fromName": "{{ class.namespace|replace({'\\': '\\u005C'}) }}", "fromLink": "{{ namespace_path(class.namespace) }}",{% endif %} "link": "{{ class_path(class) }}", "name": "{{ class.name|replace({'\\': '\\u005C'}) }}", "doc": "{{ class.shortdesc|desc(class)|json_encode }}"},
-        {{ _self.add_class_methods_index(class) }}
-    {% endfor %}
-
-    {# Override search_index_extra to add custom search entries! #}
-    {% block search_index_extra '' %}
-
-    {}];
 {% endblock %}
