Cleaning up JS and adding a root path depth to the body element

--- a/Sami/Resources/themes/default/layout/base.twig
+++ b/Sami/Resources/themes/default/layout/base.twig
@@ -29,7 +29,7 @@
 </head>
 
 {% block html %}
-    <body id="{% block body_class '' %}" data-name="{% block page_id '' %}">
+    <body id="{% block body_class '' %}" data-name="{% block page_id '' %}" data-root-path="{{ root_path }}">
         {% block content '' %}
     </body>
 {% endblock %}
