--- a/Sami/Resources/themes/default/sami.js.twig
+++ b/Sami/Resources/themes/default/sami.js.twig
@@ -1,6 +1,4 @@
 Sami = {
-    searchIndex: [],
-    leftNavHtml: '',
     searchTypeClasses: {
         'Namespace': 'label-default',
         'Class': 'label-info',
@@ -78,7 +76,12 @@ Sami.searchIndex = [
     {% endif %}
 {% endmacro %}
 
+Sami.treeHtml = '{{ _self.element(tree, project.config('default_opened_level'), 0)|replace({"'": "\\'", "\n": ''})|raw }}';
+
 $(function() {
+
+    // Add the left-nav tree to the page.
+    $('#api-tree').html(Sami.treeHtml);
 
     // Enable the version switcher
     $('#version-switcher').change(function() {
@@ -112,3 +115,26 @@ $(function() {
 
     {% endblock %}
 });
+
+{% macro element(tree, opened, depth) %}
+    <ul>
+        {%- for element in tree -%}
+            {% if element[2] %}
+                <li data-name="namespace:{{ element[1]|replace({'\\': '_'}) }}" {% if depth < opened %}class="opened"{% endif %}>
+                    <div style="padding-left:{{ depth * 18 }}px" class="hd">
+                        <span class="glyphicon glyphicon-play"></span>{% if not project.config('simulate_namespaces') %}<a href="{{ namespace_path(element[1]) }}">{% endif %}{{ element[0] }}{% if not project.config('simulate_namespaces') %}</a>{% endif %}
+                    </div>
+                    <div class="bd">
+                        {{ _self.element(element[2], opened, depth + 1) -}}
+                    </div>
+                </li>
+            {% else %}
+                <li data-name="class:{{ (element[1].name)|replace({'\\': '_'}) }}" {% if depth < opened %}class="opened"{% endif %}>
+                    <div style="padding-left:{{ 8 + (depth * 18) }}px" class="hd leaf">
+                        <a href="{{ class_path(element[1]) }}">{{ element[0] }}</a>
+                    </div>
+                </li>
+            {% endif %}
+        {%- endfor %}
+    </ul>
+{% endmacro %}
