--- a/Sami/Resources/themes/default/layout/base.twig
+++ b/Sami/Resources/themes/default/layout/base.twig
@@ -11,7 +11,7 @@
         <link rel="stylesheet" type="text/css" href="{{ path('css/sami.css') }}">
         <script src="{{ path('js/jquery-1.11.1.min.js') }}"></script>
         <script src="{{ path('js/bootstrap.min.js') }}"></script>
-        <script src="{{ path('js/sami.js') }}"></script>
+        <script src="{{ path('sami.js') }}"></script>
     {% endblock %}
 
     {% if project.config('favicon') %}
