--- a/Sami/Resources/themes/default/layout/base.twig
+++ b/Sami/Resources/themes/default/layout/base.twig
@@ -11,6 +11,7 @@
         <link rel="stylesheet" type="text/css" href="{{ path('css/sami.css') }}">
         <script src="{{ path('js/jquery-1.11.1.min.js') }}"></script>
         <script src="{{ path('js/bootstrap.min.js') }}"></script>
+        <script src="{{ path('js/typeahead.min.js') }}"></script>
         <script src="{{ path('sami.js') }}"></script>
     {% endblock %}
 
